--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,12 @@ button {
     margin-top: 20px;
     
 }
+.caixa-nuvem{
+    align-items: center;
+    margin-top: 30px;
+    display: flex
+        
+}
 
 
 .lupa {
@@ -77,7 +83,8 @@ button {
 
 .descricao {
     color: white;
-    margin-top: 10px;
+    text-transform: capitalize;
+    margin-left: 10px;
 }
 
 .umid {
